# [tool.black]
# line-length = 120

[tool.poetry]
name = "toggl-standup"
version = "0.4.1"
description = "Removes the pain of using Toggl with Geekbot"
authors = ["Jeff Triplett <jeff.triplett@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jefftriplett/toggl-standup"
repository = "https://github.com/jefftriplett/toggl-standup"
documentation = "https://github.com/jefftriplett/toggl-standup"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "togglstandup" }
]

[tool.poetry.scripts]
standup = "togglstandup:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
crayons = "^0.3.0"
humanfriendly = "^8.1"
maya = "^0.6.1"
togglwrapper = "^1.2.0"
typer = "^0.0.9"

[tool.poetry.dev-dependencies]
bumpversion = "^0.5.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
