# [tool.black]
# line-length = 120

[tool.poetry]
name = "toggl-standup"
version = "2021.12.1"
description = "Removes the pain of using Toggl with Geekbot"
authors = ["Jeff Triplett <jeff.triplett@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jefftriplett/toggl-standup"
repository = "https://github.com/jefftriplett/toggl-standup"
documentation = "https://github.com/jefftriplett/toggl-standup"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "togglstandup" }
]

[tool.poetry.scripts]
standup = "togglstandup.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.1"
humanfriendly = "^10.0"
maya = "^0.6.1"
togglwrapper = "^2.0.0"
typer = "^0.4.0"
rich = "^10.15.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
bumpver = "^2021.1112"
cogapp = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.bumpver]
current_version = "2021.12.1"
version_pattern = "YYYY.MM.INC1"
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"togglstandup/__version__.py" = [
    '__version__ = "{version}"',
]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
# "README.md" = [
#     "{version}",
#     "{pep440_version}",
# ]
